--- a/TicketManagementSystem_Capstone/App.xaml
+++ b/TicketManagementSystem_Capstone/App.xaml
@@ -2,8 +2,48 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:TicketManagementSystem_Capstone"
+             xmlns:view="clr-namespace:TicketManagementSystem_Capstone.View"
+             xmlns:viewModels="clr-namespace:TicketManagementSystem_Capstone.Models"
              StartupUri="MainWindow.xaml">
     <Application.Resources>
-         
+        <!-- Data Templates -->
+        <DataTemplate DataType="{x:Type viewModels:MainViewModel}">
+            <view:MainView/>
+        </DataTemplate>
+        <DataTemplate DataType="{x:Type viewModels:LoginViewModel}">
+            <view:LoginView/>
+        </DataTemplate>
+
+
+
+
+        <!--Window -->
+        <Style TargetType="Window">
+            <Setter x:Name="brandColor5" Property="Background" Value="#091834"/>
+
+        </Style>
+
+        <!--
+<Setter x:Name="brandColor4" Property="Background" Value="#0A337F"/>
+<Setter x:Name="brandColor3" Property="Background" Value="#1258DC"/>
+ <Setter x:Name="brandColor2" Property="Background" Value="#6395F2"/>
+<Setter x:Name="brandColor1" Property="Background" Value="#DEE9fc"/>
+ -->
+
+
+        <!--Button Style -->
+        <Style TargetType="Button" >
+            <!--add a key if it looks like shit across app -->
+            <Setter Property="Foreground" Value="#DEE6FC" />
+            <Setter Property="Background" Value="#1258DC"/>
+            <Setter Property="BorderThickness" Value="0"/>
+            <Setter Property="Margin" Value="2"/>
+        </Style>
+        <!--TextBox Style -->
+        <Style TargetType="TextBox">
+            <Setter Property="Margin" Value="2"/>
+            <Setter Property="MaxWidth" Value="120"/>
+        </Style>
+        <!-- TODO: Style your tables and reports in here -->
     </Application.Resources>
 </Application>
