--- a/TicketManagementSystem_Capstone/View/LoginView.xaml
+++ b/TicketManagementSystem_Capstone/View/LoginView.xaml
@@ -1,16 +1,12 @@
-﻿<Window x:Class="TicketManagementSystem_Capstone.View.LoginView"
-        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:TicketManagementSystem_Capstone.View"
-        xmlns:viewModel="clr-namespace:TicketManagementSystem_Capstone.ViewModel"
-        d:DataContext="{d:DesignData Type=viewModel:LoginViewModel}"
-        mc:Ignorable="d"
-        Title="Login" Height="450" Width="800"
-        Background="#091834"
-        >
-
+﻿<Page x:Class="TicketManagementSystem_Capstone.View.LoginView"
+      xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+      xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+      xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
+      xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+      xmlns:local="clr-namespace:TicketManagementSystem_Capstone.View"
+      mc:Ignorable="d" 
+      d:DesignHeight="450" d:DesignWidth="800"
+      Title="LoginView">
 
     <Grid x:Name="MainGrid" MaxWidth="480" MaxHeight="520">
 
@@ -85,4 +81,4 @@
 
 
     </Grid>
-</Window>
+</Page>
