--- a/TicketManagementSystem_Capstone/View/MainView.xaml
+++ b/TicketManagementSystem_Capstone/View/MainView.xaml
@@ -5,14 +5,57 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:TicketManagementSystem_Capstone.View"
         xmlns:viewmodel="clr-namespace:TicketManagementSystem_Capstone.ViewModel"
-        d:DataContext="{d:DesignData Type=viewmodel:LoginViewModel}"
+        d:DataContext="{d:DesignData Type=viewmodel:MainViewModel}"
         mc:Ignorable="d"
-        Title="MainView" Height="450" Width="800"
+        Title="DuraTech TSM" Height="450" Width="800"
         Background="#091832">
 
     <Grid>
-        <!-- Move grid over -->
+        
+        <Grid.RowDefinitions>
+            <RowDefinition Height="*"/>
+            <RowDefinition Height="*"/>
+            <RowDefinition Height="*"/>
+            <RowDefinition Height="*"/>
+            <RowDefinition Height="*"/>
+            <RowDefinition Height="5"/>
+        </Grid.RowDefinitions>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="5"/>
+            <ColumnDefinition Width="*"/>
+            <ColumnDefinition Width="*"/>
+            <ColumnDefinition Width="*"/>
+            <ColumnDefinition Width="*"/>
+            <ColumnDefinition Width="5"/>
+        </Grid.ColumnDefinitions>
+        
+        <!--Left Side-->
+        <Label Content="LOGO WILL GO HERE" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" Grid.Row="0" Grid.Column="1" Background="#6395f2"/>
+        <ListView x:Name="NavigationList" 
+                  Grid.Column="1" Grid.Row="1" Grid.RowSpan="4"
+                  ScrollViewer.VerticalScrollBarVisibility="Hidden"
+                  ScrollViewer.CanContentScroll="False"
+                  ScrollViewer.HorizontalScrollBarVisibility="Hidden">
+            <ListViewItem >
+                <Button Content="Tickets"
+                        Margin="0,0,0,0"
+                        Width="{Binding ActualWidth, RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type ListView}} }"
+                        Height="{Binding ActualHeight, RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type ListViewItem}}}"/>
+            </ListViewItem>
+        </ListView>
 
-        <ContentControl DataContext="{Binding CurrentWindow}"></ContentControl>
+        <TabControl Grid.Column="2" Grid.Row="0" Grid.RowSpan="5" Grid.ColumnSpan="3" Background="#6395f2">
+            <TabItem Header="Tickets" Background="#6395f2">
+                <ContentControl Content="{Binding CurrentTabView}"></ContentControl>
+            </TabItem>
+
+            <TabItem Header="Create Ticket">
+                
+            </TabItem>
+
+            <TabItem Header="Archive">
+                
+            </TabItem>
+        </TabControl>
     </Grid>
 </Window>
