--- a/TicketManagementSystem_Capstone/View/MainView.xaml
+++ b/TicketManagementSystem_Capstone/View/MainView.xaml
@@ -45,12 +45,12 @@
         </ListView>
 
         <TabControl Grid.Column="2" Grid.Row="0" Grid.RowSpan="5" Grid.ColumnSpan="3" Background="#6395f2">
-            <TabItem Header="Tickets" Background="#6395f2">
-                <ContentControl Content="{Binding CurrentTabView}"></ContentControl>
+            <TabItem Header="Tickets" >
+                <ContentControl Content="{Binding CurrentTabView}"/>
             </TabItem>
 
             <TabItem Header="Create Ticket">
-                
+                <ContentControl Content="{Binding CurrentTabView}"/>
             </TabItem>
 
             <TabItem Header="Archive">
