--- a/TicketManagementSystem_Capstone/View/ArchiveTicketView.xaml
+++ b/TicketManagementSystem_Capstone/View/ArchiveTicketView.xaml
@@ -1,16 +1,14 @@
-﻿<UserControl x:Class="TicketManagementSystem_Capstone.View.TicketControlView"
+﻿<UserControl x:Class="TicketManagementSystem_Capstone.View.ArchiveTicketView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:TicketManagementSystem_Capstone.View"
-             xmlns:viewmodel="clr-namespace:TicketManagementSystem_Capstone.ViewModel"
-             d:DataContext="{d:DesignInstance Type=viewmodel:TicketControlViewModel}"
+             xmlns:viewmodels="clr-namespace:TicketManagementSystem_Capstone.ViewModel"
+             d:DataContext="{d:DesignInstance Type=viewmodels:ArchiveTicketViewModel}"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
     <Grid>
-        
-        
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="*"/>
             <ColumnDefinition Width="*"/>
@@ -25,31 +23,19 @@
             <RowDefinition Height="*"/>
             <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
-        
-        <!--Ticket List-->
-        <Label Content="Tickets" Foreground="White" FontSize="28" VerticalAlignment="Bottom" HorizontalAlignment="Center"/>
-        <!--Radio Buttons-->
-        <StackPanel Orientation="Horizontal" Grid.Column="1" VerticalAlignment="Bottom" Grid.ColumnSpan="2">
-            <RadioButton Content="Open"
-                IsChecked="True"
-                Margin="0,0,5,0"
-                         Command="{Binding ShowOpenTicketsCommand}" />
-            <RadioButton Content="Assigned"
-                         Command="{Binding ShowAssignedTicketsCommand}" />
-        </StackPanel>
-        
+        <Label Content="Archived Tickets" FontSize="16" VerticalAlignment="Bottom"/>
         <!--Data Grid-->
         <DataGrid Grid.Row="1" Grid.ColumnSpan="3" Grid.RowSpan="3" 
-                  ItemsSource="{Binding Tickets}"
-                  SelectionMode="Single"
-                  SelectedItem="{Binding SelectedTicket}"
-                  IsReadOnly="True"
-                  >
+          ItemsSource="{Binding Tickets}"
+          SelectionMode="Single"
+          SelectedItem="{Binding SelectedTicket}"
+          IsReadOnly="True"
+          >
         </DataGrid>
-        
+
         <!--Ticket View on Right Side-->
         <Border Grid.Column="3" Grid.ColumnSpan="4"
-                Grid.RowSpan="4" BorderBrush="Black" BorderThickness="1">
+        Grid.RowSpan="4" BorderBrush="Black" BorderThickness="1">
             <!--Ticket Information-->
             <StackPanel>
                 <Label Content="Ticket Information" FontSize="16"/>
@@ -64,8 +50,8 @@
                 <WrapPanel Orientation="Horizontal">
                     <Label Content="Description:"/>
                     <TextBlock Text="{Binding SelectedTicket.Description}"
-                               TextWrapping="Wrap"
-                               Margin="5,0,0,0"/>
+                       TextWrapping="Wrap"
+                       Margin="5,0,0,0"/>
                 </WrapPanel>
                 <StackPanel Orientation="Horizontal">
                     <Label Content="Status:"/>
@@ -73,7 +59,7 @@
                 </StackPanel>
                 <StackPanel Orientation="Horizontal">
                     <Label Content="Priority:"/>
-                    <Label Content="{Binding SelectedCustomer.Is_Priority}"></Label>
+                    <Label Content="{Binding SelectedCustomer.Is_Priority}"/>
                 </StackPanel>
 
                 <StackPanel Orientation="Horizontal">
@@ -87,32 +73,32 @@
                 <!--Assignee-->
                 <StackPanel Orientation="Horizontal">
                     <Label Content="Assigned To:"/>
-                    <ComboBox ItemsSource="{Binding Groups}" 
-                              MinWidth="100"/>
+                    <Label Content="{Binding SelectedTicket}"/> <!-- Add Assigned to group -->
                 </StackPanel>
-                
+
                 <!--Customer Information-->
                 <Label Content="Customer Information" FontSize="16"/>
                 <StackPanel Orientation="Horizontal">
                     <Label Content="Name:"/>
-                    <TextBox Text="{Binding SelectedCustomer.Name}"/>
+                    <TextBox Text="{Binding SelectedCustomer.Name}"
+                             IsReadOnly="True"/>
                 </StackPanel>
                 <StackPanel Orientation="Horizontal">
                     <Label Content="Phone:"/>
-                    <TextBox Text="{Binding SelectedCustomer.Phone}"/>
+                    <TextBox Text="{Binding SelectedCustomer.Phone}"
+                             IsReadOnly="True"/>
                 </StackPanel>
                 <StackPanel Orientation="Horizontal">
                     <Label Content="Email: "/>
-                    <TextBox Text="{Binding SelectedCustomer.Email}"/>
+                    <TextBox Text="{Binding SelectedCustomer.Email}"
+                             IsReadOnly="True"/>
                 </StackPanel>
             </StackPanel>
         </Border>
         <!-- Buttons -->
         <StackPanel Orientation="Horizontal" Grid.Row="4" Grid.Column="3" Grid.ColumnSpan="4" HorizontalAlignment="Center">
-            <Button Content="Update" VerticalAlignment="Top"
-                    Command="{Binding UpdateSelectedTicketCommand}"/>
-            <Button Content="Delete" VerticalAlignment="Top" 
-                    Command="{Binding DeleteSelectedTicketCommand}"/>
+            <Button Content="Reopen Ticket" VerticalAlignment="Top"
+            Command="{Binding ReopenSelectedTicketCommand}"/>
         </StackPanel>
     </Grid>
 </UserControl>
