--- a/TicketManagementSystem_Capstone/View/MainView.xaml
+++ b/TicketManagementSystem_Capstone/View/MainView.xaml
@@ -7,11 +7,11 @@
         xmlns:viewmodel="clr-namespace:TicketManagementSystem_Capstone.ViewModel"
         d:DataContext="{d:DesignInstance Type=viewmodel:MainViewModel}"
         mc:Ignorable="d"
-        Title="DuraTech TSM" Height="450" Width="800"
+        Title="DuraTech TMS" Height="450" Width="800"
         Background="#091832">
 
     <Grid>
-        
+
         <Grid.RowDefinitions>
             <RowDefinition Height="*"/>
             <RowDefinition Height="*"/>
@@ -28,19 +28,27 @@
             <ColumnDefinition Width="*"/>
             <ColumnDefinition Width="5"/>
         </Grid.ColumnDefinitions>
-        
+
         <!--Left Side-->
         <Label Content="LOGO WILL GO HERE" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" Grid.Row="0" Grid.Column="1" Background="#6395f2"/>
-        <ListView x:Name="NavigationList" 
+        <ListView x:Name="NavigationList"
                   Grid.Column="1" Grid.Row="1" Grid.RowSpan="4"
                   ScrollViewer.VerticalScrollBarVisibility="Hidden"
                   ScrollViewer.CanContentScroll="False"
                   ScrollViewer.HorizontalScrollBarVisibility="Hidden">
             <ListViewItem>
                 <Button Content="Tickets"
-                        Margin="0,0,0,0"
+                        Margin="-8,-5,0,0"
                         Width="{Binding ActualWidth, RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type ListView}}}"
                         Height="{Binding ActualHeight, RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type ListViewItem}}}"/>
+            </ListViewItem>
+            <ListViewItem>
+                <Button Content="Customers"
+                        Margin="-8,-5,0,0"
+                        Width="{Binding ActualWidth, RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type ListView}}}"
+                        Height="{Binding ActualHeight, RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type ListViewItem}}}"
+                        />
+
             </ListViewItem>
         </ListView>
 
@@ -52,6 +60,7 @@
             <TabItem Header="Create Ticket">
                 <ContentControl Content="{Binding CurrentTabView}"/>
             </TabItem>
+            
 
             <TabItem Header="Archive">
                 <ContentControl Content="{Binding CurrentTabView}"/>
