--- a/TicketManagementSystem_Capstone/View/CreateNewTicketView.xaml
+++ b/TicketManagementSystem_Capstone/View/CreateNewTicketView.xaml
@@ -8,58 +8,74 @@
              d:DataContext="{d:DesignInstance Type=viewmodels:CreateNewTicketViewModel}"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
-    
-    <StackPanel>
-        <Label Content="Ticket Information" FontSize="20"/>
 
-        <!--Ticket Title-->
-        <StackPanel Orientation="Horizontal">
-            <Label Content="Title:"/>
-            <TextBox Text="{Binding Title}"/>
-        </StackPanel>
+    <Grid>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="auto"/>
+            <RowDefinition Height="auto"/>
+            <RowDefinition Height="auto"/>
+            <RowDefinition Height="auto"/>
+            <RowDefinition Height="auto"/>
+            <RowDefinition Height="auto"/>
+            <RowDefinition Height="auto"/>
+            <RowDefinition Height="auto"/>
+            <RowDefinition Height="auto"/>
+            <RowDefinition Height="auto"/>
+            <RowDefinition Height="auto"/>
+        </Grid.RowDefinitions>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="auto"/>
+            <ColumnDefinition Width="auto"/>
+            <ColumnDefinition Width="*"/>
+        </Grid.ColumnDefinitions>
+        <!--Ticket Information Area-->
+        <Label Content="Ticket Information" 
+               FontSize="20"
+               Grid.Row="0"
+               Grid.ColumnSpan="2"
+               />
+        <!-- Ticket Title-->
+        <Label Content="Title:" Grid.Row="1"/>
+        <TextBox Text="{Binding Title}" Grid.Row="1" Grid.Column="1" HorizontalAlignment="Left"
+                 />
+        <!-- Description -->
+        <Label Content="Description:" Grid.Row="2"/>
+        <TextBox Text="{Binding Description}" Grid.Row="2" Grid.Column="1" HorizontalAlignment="Left"
+                 TextWrapping="Wrap"/>
+        
+        <!--Ticket Status-->
+        <Label Content="Status:" Grid.Row="3"/>
+        <ComboBox  ItemsSource="{Binding Statuses}"  SelectedItem="{Binding Status}"
+                   Grid.Row="3" Grid.Column="1" MinWidth="100" HorizontalAlignment="Left"/>
+        
+        <!--Ticket Assigned To-->
+        <Label Content="Assigned To:" Grid.Row="4"/>
+        <ComboBox ItemsSource="{Binding Groups}" SelectedItem="{Binding AssignedTo}"
+                  Grid.Row="4" Grid.Column="1" HorizontalAlignment="Left" Height="20"/>
+        
+        <!--Customer Information Area-->
+        <Label Content="Customer Information" Grid.Row="5" FontSize="20" Grid.ColumnSpan="2"/>
+        
+        <!--Customer Name -->
+        <Label Content="Customer Name:" Grid.Row="6"/>
+        <TextBox Text="{Binding CustomerName}" Grid.Row="6" Grid.Column="1"/>
+        <!--Customer Phone Number-->
+        
+        <Label Content="Phone Number:" Grid.Row="7"/>
+        <TextBox Text="{Binding Phone}" Grid.Row="7" Grid.Column="1"/>
+        
+        <!-- Customer Email -->
+        <Label Content="Email:" Grid.Row="8"/>
+        <TextBox Text="{Binding Email}" Grid.Row="8" Grid.Column="1"/>
+        
+        <!-- Customer Priority -->
+        <Label Content="Priority:" Grid.Row="9"/>
+        <ComboBox ItemsSource="{Binding Priorities}" 
+              SelectedItem="{Binding Priority}"
+                  Grid.Row="9" Grid.Column="1"/>
 
-        <!--Ticket Description-->
-        <StackPanel Orientation="Horizontal">
-            <Label Content="Description:"/>
-            <TextBox Text="{Binding Description}"
-             TextWrapping="Wrap"  />
-        </StackPanel>
-        <StackPanel Orientation="Horizontal">
-            <Label Content="Status:"/>
-            <ComboBox  ItemsSource="{Binding Statuses}"  SelectedItem="{Binding Status}"/>
-        </StackPanel>
+            <Button Content="Create Ticket" Command="{Binding CreateTicketCommand}" Grid.Row="10"/>
+        <Button Content="Clear" Command="{Binding ClearCommand}" Grid.Row="10" Grid.Column="1"/>
         
-        <StackPanel Orientation="Horizontal">
-            <Label Content="Assigned To:"/>
-            <ComboBox ItemsSource="{Binding Groups}" SelectedItem="{Binding AssignedTo}"/>
-        </StackPanel>
-        
-        <Label Content="Customer Information" FontSize="20"/>
-        <StackPanel Orientation="Horizontal">
-            <Label Content="Customer Name:"/>
-            <TextBox  Text="{Binding CustomerName}"/>
-        </StackPanel>
-        
-        <StackPanel Orientation="Horizontal">
-            <Label Content="Phone Number:"/>
-            <TextBox  Text="{Binding Phone}"/>
-        </StackPanel>
-        
-        <StackPanel Orientation="Horizontal">
-            <Label Content="Email:"/>
-            <TextBox Text="{Binding Email}"/>
-        </StackPanel>
-        
-        <StackPanel Orientation="Horizontal">
-            <Label Content="Priority:"/>
-            <ComboBox ItemsSource="{Binding Priorities}" 
-                      SelectedItem="{Binding Priority}"/>
-        </StackPanel>
-        
-        <StackPanel Orientation="Horizontal" Margin="20,5">
-            <Button Content="Create Ticket" Command="{Binding CreateTicketCommand}"/>
-            <Button Content="Clear" Command="{Binding ClearCommand}"/>
-        </StackPanel>
-        
-    </StackPanel>
+    </Grid>
 </UserControl>
