--- a/TicketManagementSystem_Capstone/View/TicketControlView.xaml
+++ b/TicketManagementSystem_Capstone/View/TicketControlView.xaml
@@ -7,10 +7,8 @@
              xmlns:viewmodel="clr-namespace:TicketManagementSystem_Capstone.ViewModel"
              d:DataContext="{d:DesignInstance Type=viewmodel:TicketControlViewModel}"
              mc:Ignorable="d" 
-             d:DesignHeight="450" d:DesignWidth="800">
+             d:DesignHeight="600" d:DesignWidth="800">
     <Grid>
-        
-        
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="*"/>
             <ColumnDefinition Width="*"/>
@@ -26,8 +24,10 @@
             <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
         
+        <StackPanel Grid.ColumnSpan="3" Grid.RowSpan="3" Orientation="Vertical">
         <!--Ticket List-->
-        <Label Content="Tickets" Foreground="White" FontSize="28" VerticalAlignment="Bottom" HorizontalAlignment="Center"/>
+        <Label Content="Tickets" FontSize="28" VerticalAlignment="Bottom"/>
+            
         <!--Radio Buttons-->
         <StackPanel Orientation="Horizontal" Grid.Column="1" VerticalAlignment="Bottom" Grid.ColumnSpan="2">
             <RadioButton Content="Open"
@@ -39,74 +39,116 @@
         </StackPanel>
         
         <!--Data Grid-->
-        <DataGrid Grid.Row="1" Grid.ColumnSpan="3" Grid.RowSpan="3" 
+        <DataGrid   
                   ItemsSource="{Binding Tickets}"
                   SelectionMode="Single"
                   SelectedItem="{Binding SelectedTicket}"
                   IsReadOnly="True"
+                  CanUserSortColumns="False"
+                  MinHeight="300"
                   >
         </DataGrid>
-        
+        </StackPanel>
         <!--Ticket View on Right Side-->
         <Border Grid.Column="3" Grid.ColumnSpan="4"
                 Grid.RowSpan="4" BorderBrush="Black" BorderThickness="1">
             <!--Ticket Information-->
-            <StackPanel>
-                <Label Content="Ticket Information" FontSize="16"/>
-                <StackPanel Orientation="Horizontal">
-                    <Label Content="Ticket ID:"/>
-                    <Label Content="{Binding SelectedTicket.Id}"/>
-                </StackPanel>
-                <StackPanel Orientation="Horizontal">
-                    <Label Content="Title:"/>
-                    <Label Content="{Binding SelectedTicket.Title}"/>
-                </StackPanel>
-                <WrapPanel Orientation="Horizontal">
-                    <Label Content="Description:"/>
-                    <TextBlock Text="{Binding SelectedTicket.Description}"
-                               TextWrapping="Wrap"
-                               Margin="5,0,0,0"/>
-                </WrapPanel>
-                <StackPanel Orientation="Horizontal">
-                    <Label Content="Status:"/>
-                    <Label Content="{Binding SelectedTicket.Status}"/>
-                </StackPanel>
-                <StackPanel Orientation="Horizontal">
-                    <Label Content="Priority:"/>
-                    <Label Content="{Binding SelectedCustomer.Is_Priority}"></Label>
-                </StackPanel>
+            <Grid>
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="auto"/>
+                    <RowDefinition Height="auto"/>
+                    <RowDefinition Height="auto"/>
+                    <RowDefinition Height="auto"/>
+                    <RowDefinition Height="auto"/>
+                    <RowDefinition Height="auto"/>
+                    <RowDefinition Height="auto"/>
+                    <RowDefinition Height="auto"/>
+                    <RowDefinition Height="auto"/>
+                    <RowDefinition Height="auto"/>
+                    <RowDefinition Height="auto"/>
+                    <RowDefinition Height="auto"/>
+                    <RowDefinition Height="auto"/>
+                    <RowDefinition Height="auto"/>
+                    <RowDefinition Height="auto"/>
+                    <RowDefinition Height="auto"/>
+                    <RowDefinition Height="auto"/>
+                    
+                </Grid.RowDefinitions>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="auto"/>
+                    <ColumnDefinition Width="auto"/>
+                    <ColumnDefinition Width="*"/>
+                </Grid.ColumnDefinitions>
+                <!--Ticket Information Area-->
+                <Label Content="Ticket Information" 
+                        FontSize="20"
+                        Grid.ColumnSpan="2"/>
+                <!-- Ticket Title-->
+                <Label Content="Title:" Grid.Row="1"/>
+                <TextBox Text="{Binding SelectedTicket.Title}" Grid.Row="1" Grid.Column="1" HorizontalAlignment="Left"/>
+                <!-- Description -->
+                <Label Content="Description:" Grid.Row="2"/>
+                <TextBox Text="{Binding SelectedTicket.Description}" Grid.Row="2" Grid.Column="1"
+                         Grid.ColumnSpan="2" HorizontalAlignment="Left"
+             TextWrapping="Wrap"/>
 
-                <StackPanel Orientation="Horizontal">
-                    <Label Content="Created Date:"/>
-                    <Label Content="{Binding SelectedTicket.Created_Date}"/>
-                </StackPanel>
-                <StackPanel Orientation="Horizontal">
-                    <Label Content="Last Updated:"/>
-                    <Label Content="{Binding SelectedTicket.Updated_Date}"/>
-                </StackPanel>
-                <!--Assignee-->
-                <StackPanel Orientation="Horizontal">
-                    <Label Content="Assigned To:"/>
-                    <ComboBox ItemsSource="{Binding Groups}"
-                              SelectedItem="{Binding SelectedTicket.Assigned_To}"
-                              MinWidth="100"/>
-                </StackPanel>
+                <!--Ticket Status-->
+                <Label Content="Status:" Grid.Row="3"/>
+                <ComboBox  ItemsSource="{Binding Statuses}"  SelectedItem="{Binding SelectedTicket.Status}"
+               Grid.Row="3" Grid.Column="1" MinWidth="100" HorizontalAlignment="Left"/>
+
+                <!--Ticket Assigned To-->
+                <Label Content="Assigned To:" Grid.Row="4"/>
+                <ComboBox ItemsSource="{Binding Groups}" SelectedItem="{Binding SelectedTicket.Assigned_To}"
+                            Grid.Row="4" Grid.Column="1" HorizontalAlignment="Left" Height="20"/>
+                <Label Content="Created Date:"
+                       Grid.Row="5"/>
+                <Label Content="{Binding SelectedTicket.Created_Date}"
+                       Grid.Row="5" Grid.Column="1"/>
+                <Label Content="Updated Date:" 
+                       Grid.Row="6" />
+                <Label Content="{Binding SelectedTicket.Updated_Date}"
+                       Grid.Row="6" Grid.Column="1"/>
+
+
+                <!--Customer Information Area-->
+                <Label Content="Customer Information" Grid.Row="7" FontSize="20" Grid.ColumnSpan="2"/>
+
+                <!--Customer Name -->
+                <Label Content="Customer Name:" Grid.Row="8"/>
+                <Label Content="{Binding SelectedCustomer.Name}"
+                       Grid.Row="8" Grid.Column="1"/>
                 
-                <!--Customer Information-->
-                <Label Content="Customer Information" FontSize="16"/>
-                <StackPanel Orientation="Horizontal">
-                    <Label Content="Name:"/>
-                    <TextBox Text="{Binding SelectedCustomer.Name}"/>
-                </StackPanel>
-                <StackPanel Orientation="Horizontal">
-                    <Label Content="Phone:"/>
-                    <TextBox Text="{Binding SelectedCustomer.Phone}"/>
-                </StackPanel>
-                <StackPanel Orientation="Horizontal">
-                    <Label Content="Email: "/>
-                    <TextBox Text="{Binding SelectedCustomer.Email}"/>
-                </StackPanel>
-            </StackPanel>
+                <!--Customer Phone Number-->
+                <Label Content="Phone Number:" Grid.Row="9"/>
+                <Label Content="{Binding SelectedCustomer.Phone}"
+                       Grid.Row="9" Grid.Column="1"/>
+
+                <!-- Customer Email -->
+                <Label Content="Email:" Grid.Row="10"/>
+                <Label Content="{Binding SelectedCustomer.Email}"
+                       Grid.Row="10" Grid.Column="1"/>
+
+                <!-- Customer Priority -->
+                <Label Content="Priority:" Grid.Row="11"/>
+                <Label Content="{Binding SelectedCustomer.Is_Priority}"
+                       Grid.Row="11" Grid.Column="1"/>
+                <Label Content="Address:" Grid.Row="12"/>
+                <Label Content="{Binding SelectedCustomer.Address}" 
+                       Grid.Column="1" Grid.Row="12"/>
+
+                <Label Content="State:" Grid.Row="13"/>
+                <Label Content="{Binding SelectedCustomer.State}"
+                       Grid.Column="1" Grid.Row="13"/>
+
+                <Label Content="City:" Grid.Row="14"/>
+                <Label Content="{Binding SelectedCustomer.City}"
+                       Grid.Row="14" Grid.Column="1"/>
+                <Label Content="Zip Code:"
+                       Grid.Row="15"/>
+                <Label Content="{Binding SelectedCustomer.Zip}"
+                       Grid.Row="15" Grid.Column="1"/>
+            </Grid>
         </Border>
         <!-- Buttons -->
         <StackPanel Orientation="Horizontal" Grid.Row="4" Grid.Column="3" Grid.ColumnSpan="4" HorizontalAlignment="Center">
