--- a/TicketManagementSystem_Capstone/View/CreateNewTicketView.xaml
+++ b/TicketManagementSystem_Capstone/View/CreateNewTicketView.xaml
@@ -22,6 +22,10 @@
             <RowDefinition Height="auto"/>
             <RowDefinition Height="auto"/>
             <RowDefinition Height="auto"/>
+            <RowDefinition Height="auto"/>
+            <RowDefinition Height="auto"/>
+            <RowDefinition Height="auto"/>
+            <RowDefinition Height="auto"/>
         </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="auto"/>
@@ -73,9 +77,28 @@
         <ComboBox ItemsSource="{Binding Priorities}" 
               SelectedItem="{Binding Priority}"
                   Grid.Row="9" Grid.Column="1"/>
-
-            <Button Content="Create Ticket" Command="{Binding CreateTicketCommand}" Grid.Row="10"/>
-        <Button Content="Clear" Command="{Binding ClearCommand}" Grid.Row="10" Grid.Column="1"/>
+        
+        <!--Customer Address-->
+        <Label Content="Address:" Grid.Row="10"/>
+        <TextBox Text="{Binding Address}" 
+                 Grid.Row="10" Grid.Column="1"/>
+        
+        <!--Customer City-->
+        <Label Content="City:" Grid.Row="11"/>
+        <TextBox Text="{Binding City}" 
+         Grid.Row="11" Grid.Column="1"/>
+        
+        <!--Customer State-->
+        <Label Content="State:" Grid.Row="12"/>
+        <TextBox Text="{Binding State}" 
+                Grid.Row="12" Grid.Column="1"/>
+        <!--Customer Zip-->
+        <Label Content="Zip Code:" Grid.Row="13"/>
+        <TextBox Text="{Binding Zip}" 
+                Grid.Row="13" Grid.Column="1"/>
+        <!--Buttons-->
+        <Button Content="Create Ticket" Command="{Binding CreateTicketCommand}" Grid.Row="14"/>
+        <Button Content="Clear" Command="{Binding ClearCommand}" Grid.Row="14" Grid.Column="1"/>
         
     </Grid>
 </UserControl>
