--- a/TicketManagementSystem_Capstone/View/CreateNewCustomerView.xaml
+++ b/TicketManagementSystem_Capstone/View/CreateNewCustomerView.xaml
@@ -12,6 +12,7 @@
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="Auto"/>
             <ColumnDefinition Width="Auto"/>
+            <ColumnDefinition Width="*"/>
         </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto"/>
@@ -32,40 +33,68 @@
 
         <!--Customer Name -->
         <Label Content="Customer Name:" Grid.Row="1"/>
-        <TextBox Text="{Binding CustomerName}" Grid.Row="1" Grid.Column="1"/>
+        <TextBox x:Name="CustomerNameTextBox"
+            Text="{Binding CustomerName, UpdateSourceTrigger=PropertyChanged, NotifyOnValidationError=True}"
+                 Grid.Row="1" Grid.Column="1"/>
+        <Label Content="{Binding (Validation.Errors)[0].ErrorContent, ElementName=CustomerNameTextBox}"
+               Grid.Row="1" Grid.Column="2"/>
         
         <!--Customer Phone Number-->
         <Label Content="Phone Number:" Grid.Row="2"/>
-        <TextBox Text="{Binding Phone}" Grid.Row="2" Grid.Column="1"/>
+        <TextBox x:Name="PhoneTextBox"
+            Text="{Binding Phone, UpdateSourceTrigger=PropertyChanged, NotifyOnValidationError=True}" 
+                 Grid.Row="2" Grid.Column="1"/>
+        <Label Content="{Binding (Validation.Errors)[0].ErrorContent, ElementName=PhoneTextBox}"
+               Grid.Row="2" Grid.Column="2"/>
 
         <!-- Customer Email -->
         <Label Content="Email:" Grid.Row="3"/>
-        <TextBox Text="{Binding Email}" Grid.Row="3" Grid.Column="1"/>
-
+        <TextBox x:Name="EmailTextBox"
+            Text="{Binding Email, UpdateSourceTrigger=PropertyChanged, NotifyOnValidationError=True}"
+                 Grid.Row="3" Grid.Column="1"/>
+        <Label Content="{Binding (Validation.Errors)[0].ErrorContent, ElementName=EmailTextBox}"
+        Grid.Row="3" Grid.Column="2"/>
+        
         <!-- Customer Priority -->
         <Label Content="Priority:" Grid.Row="4"/>
-        <ComboBox ItemsSource="{Binding Priorities}" 
-                  SelectedItem="{Binding Priority}"
+        <ComboBox x:Name="PriorityComboBox"
+                  ItemsSource="{Binding Priorities}" 
+                  SelectedItem="{Binding Priority, UpdateSourceTrigger=PropertyChanged, NotifyOnValidationError=True}"
                   Grid.Row="4" Grid.Column="1"/>
-
+        <Label Content="{Binding (Validation.Errors)[0].ErrorContent, ElementName=PriorityComboBox}"
+               Grid.Row="4" Grid.Column="2"/>
+        
         <!--Customer Address-->
         <Label Content="Address:" Grid.Row="5"/>
-        <TextBox Text="{Binding Address}" 
-         Grid.Row="5" Grid.Column="1"/>
-
+        <TextBox x:Name="AddressTextBox"
+            Text="{Binding Address, UpdateSourceTrigger=PropertyChanged, NotifyOnValidationError=True}" 
+                 Grid.Row="5" Grid.Column="1"/>
+        <Label Content="{Binding (Validation.Errors)[0].ErrorContent, ElementName=AddressTextBox}"
+                Grid.Row="5" Grid.Column="2"/>
+        
         <!--Customer City-->
         <Label Content="City:" Grid.Row="6"/>
-        <TextBox Text="{Binding City}" 
- Grid.Row="6" Grid.Column="1"/>
-
+        <TextBox x:Name="CityTextBox"
+                 Text="{Binding City, UpdateSourceTrigger=PropertyChanged, NotifyOnValidationError=True}" 
+                 Grid.Row="6" Grid.Column="1"/>
+        <Label Content="{Binding (Validation.Errors)[0].ErrorContent, ElementName=CityTextBox}"
+                 Grid.Row="6" Grid.Column="2"/>
+        
         <!--Customer State-->
         <Label Content="State:" Grid.Row="7"/>
-        <TextBox Text="{Binding State}" 
-        Grid.Row="7" Grid.Column="1"/>
+        <TextBox x:Name="StateTextBox"
+                 Text="{Binding State, UpdateSourceTrigger=PropertyChanged, NotifyOnValidationError=True}" 
+                 Grid.Row="7" Grid.Column="1"/>
+        <Label Content="{Binding (Validation.Errors)[0].ErrorContent, ElementName=StateTextBox}"
+               Grid.Row="7" Grid.Column="2"/>
         <!--Customer Zip-->
         <Label Content="Zip Code:" Grid.Row="8"/>
-        <TextBox Text="{Binding Zip}" 
-        Grid.Row="8" Grid.Column="1"/>
+        <TextBox x:Name="ZipTextBox"
+                 Text="{Binding Zip, UpdateSourceTrigger=PropertyChanged, NotifyOnValidationError=True}" 
+                 Grid.Row="8" Grid.Column="1"/>
+        <Label Content="{Binding (Validation.Errors)[0].ErrorContent, ElementName=ZipTextBox}"
+               Grid.Row="8" Grid.Column="2"/>
+        
         <!--Buttons-->
         <Button Content="Create Customer" Command="{Binding CreateCustomerCommand}" Grid.Row="9"/>
         <Button Content="Clear" Command="{Binding ClearCommand}" Grid.Row="9" Grid.Column="1"/>
