--- a/TicketManagementSystem_Capstone/View/CreateNewTicketView.xaml
+++ b/TicketManagementSystem_Capstone/View/CreateNewTicketView.xaml
@@ -41,36 +41,51 @@
         <!-- Ticket Title-->
         <Label Content="Title:" Grid.Row="1"/>
         <TextBox Text="{Binding Title}" Grid.Row="1" Grid.Column="1" HorizontalAlignment="Left"
+                 Grid.ColumnSpan="2"
                  />
         <!-- Description -->
         <Label Content="Description:" Grid.Row="2"/>
         <TextBox Text="{Binding Description}" Grid.Row="2" Grid.Column="1" HorizontalAlignment="Left"
+                 Grid.ColumnSpan="2"
                  TextWrapping="Wrap"/>
         
         <!--Ticket Status-->
         <Label Content="Status:" Grid.Row="3"/>
         <ComboBox  ItemsSource="{Binding Statuses}"  SelectedItem="{Binding Status}"
-                   Grid.Row="3" Grid.Column="1" MinWidth="100" HorizontalAlignment="Left"/>
+                   Grid.Row="3" Grid.Column="1" 
+                   MinWidth="100" HorizontalAlignment="Left"/>
         
         <!--Ticket Assigned To-->
         <Label Content="Assigned To:" Grid.Row="4"/>
         <ComboBox ItemsSource="{Binding Groups}" SelectedItem="{Binding AssignedTo}"
-                  Grid.Row="4" Grid.Column="1" HorizontalAlignment="Left" Height="20"/>
+                  Grid.Row="4" Grid.Column="1" Grid.ColumnSpan="2"
+                  HorizontalAlignment="Left" Height="20"/>
         
         <!--Customer Information Area-->
         <Label Content="Customer Information" Grid.Row="5" FontSize="20" Grid.ColumnSpan="2"/>
         
         <!--Customer Name -->
         <Label Content="Customer Name:" Grid.Row="6"/>
-        <TextBox Text="{Binding CustomerName}" Grid.Row="6" Grid.Column="1"/>
+        <TextBox Text="{Binding CustomerName}" 
+                 Grid.Row="6" Grid.Column="1" 
+                 Grid.ColumnSpan="2"
+                 HorizontalAlignment="Left"/>
         <!--Customer Phone Number-->
         
-        <Label Content="Phone Number:" Grid.Row="7"/>
-        <TextBox Text="{Binding Phone}" Grid.Row="7" Grid.Column="1"/>
+        <Label Content="Phone Number:" 
+               Grid.Row="7"/>
+        <TextBox Text="{Binding Phone}" 
+                 Grid.Row="7" Grid.Column="1"
+                 Grid.ColumnSpan="2"
+                 HorizontalAlignment="Left"/>
         
         <!-- Customer Email -->
-        <Label Content="Email:" Grid.Row="8"/>
-        <TextBox Text="{Binding Email}" Grid.Row="8" Grid.Column="1"/>
+        <Label Content="Email:" 
+               Grid.Row="8"/>
+        <TextBox Text="{Binding Email}" 
+                 Grid.Row="8" Grid.Column="1"
+                 Grid.ColumnSpan="2"
+                 HorizontalAlignment="Left"/>
         
         <!-- Customer Priority -->
         <Label Content="Priority:" Grid.Row="9"/>
@@ -81,21 +96,29 @@
         <!--Customer Address-->
         <Label Content="Address:" Grid.Row="10"/>
         <TextBox Text="{Binding Address}" 
-                 Grid.Row="10" Grid.Column="1"/>
+                 Grid.Row="10" Grid.Column="1"
+                 Grid.ColumnSpan="2"
+                 HorizontalAlignment="Left"/>
         
         <!--Customer City-->
         <Label Content="City:" Grid.Row="11"/>
         <TextBox Text="{Binding City}" 
-         Grid.Row="11" Grid.Column="1"/>
+         Grid.Row="11" Grid.Column="1"
+                 Grid.ColumnSpan="2"
+                 HorizontalAlignment="Left"/>
         
         <!--Customer State-->
         <Label Content="State:" Grid.Row="12"/>
         <TextBox Text="{Binding State}" 
-                Grid.Row="12" Grid.Column="1"/>
+                Grid.Row="12" Grid.Column="1"
+                 Grid.ColumnSpan="2"
+                 HorizontalAlignment="Left"/>
         <!--Customer Zip-->
         <Label Content="Zip Code:" Grid.Row="13"/>
         <TextBox Text="{Binding Zip}" 
-                Grid.Row="13" Grid.Column="1"/>
+                Grid.Row="13" Grid.Column="1"
+                 Grid.ColumnSpan="2"
+                 HorizontalAlignment="Left"/>
         <!--Buttons-->
         <Button Content="Create Ticket" Command="{Binding CreateTicketCommand}" Grid.Row="14"/>
         <Button Content="Clear" Command="{Binding ClearCommand}" Grid.Row="14" Grid.Column="1"/>
