removed and sorted usings, semi coloned namespaces, formatted, etc

--- a/TicketManagementSystem_Capstone/View/CustomerView.xaml
+++ b/TicketManagementSystem_Capstone/View/CustomerView.xaml
@@ -28,7 +28,8 @@
             <!-- Customer Data grid -->
             <DataGrid ItemsSource="{Binding Customers}" 
                       SelectedItem="{Binding SelectedCustomer}"
-                      IsReadOnly="True" CanUserSortColumns="False"
+                      IsReadOnly="True" CanUserSortColumns="True"
+                      CanUserReorderColumns="False"
                       MinHeight="300"/>
         </StackPanel>
             
